Added Bootstrap, Finished Header, Started index
- Downloaded and added Bootstrap and cleaned up css all but the login Pages
- Made Custom CSS file for edits to Bootstrap
- Finished header.php file
- Started building index.php with user dashboard

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+/************************************************************************************************************************************************************
+
+This is the custom stylesheet to make custom edits to the Bootstrap theme
+
+************************************************************************************************************************************************************/
+
+
 /******************************General Site Styles******************************/
 
 
@@ -7,715 +14,45 @@ font-weight: bold;
 }
 
 body {
+padding: 3em 0 70px 0;
 background: #484848 url(images/blacklinen.png) repeat;
-margin: 0;
-padding-bottom: 70px;
-font-size: 14px;
-line-height: 1.42857143;
-color: #333;
-}
-
-.login-body {
-padding-top:3em;
-margin: 8px;
-}
-
-a {
-color: #428bca;
-text-decoration: none;
-background: transparent;
-}
-
-a:hover, a:focus {
-color: #2a6496;
-text-decoration: underline;
-}
-
-b, strong {
-font-weight: 700;
-}
-
-ul, ol {
-margin-top: 0;
-margin-bottom: 10px;
-}
-
-ul ul, ol ul, ul ol, ol ol {
-margin-bottom: 0;
-}
-
-.col-lg-offset-3 {
-margin-left: 25%;
-}
-
-.col-lg-6 {
-width: 50%;
-}
-
-.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11 {
-float: left;
-}
-
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
-position: relative;
-min-height: 1px;
-padding-left: 15px;
-padding-right: 15px;
-}
-
-*, :before, :after {
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
-}
-
-.panel-default {
-border-color: #ddd;
-}
-
-.panel {
-margin-bottom: 20px;
-background-color: #fff;
-border: 1px solid transparent;
-border-radius: 4px;
--webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-}
-
-.panel-body {
-overflow-x: auto;
-padding: 15px;
-}
-
-.panel-body:after {
-clear: both;
-}
-
-.panel-body:before, .panel-body:after {
-content: " ";
-display: table;
-}
-
-.text-center {
-text-align: center;
-}
-
-img {
-vertical-align: middle;
-border: 0;
-}
-
-.panel-body hr {
-margin-left: -15px;
-margin-right: -15px;
-}
-
-hr {
--moz-box-sizing: content-box;
-box-sizing: content-box;
-}
-
-hr {
-height: 12px;
-border: 0;
-box-shadow: inset 0 12px 12px -12px rgba(0,0,0,.25);
-}
-
-hr {
-margin-top: 20px;
-margin-bottom: 20px;
-border: 0;
-border-top: 1px solid #eee;
-}
-
-.row {
-margin-left: -15px;
-margin-right: -15px;
-}
-
-.row:before, .row:after {
-content: " ";
-display: table;
-}
-
-.row:after {
-clear: both;
-}
-
-.col-lg-12 {
-width: 100%;
-}
-
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
-position: relative;
-min-height: 1px;
-padding-left: 15px;
-padding-right: 15px;
-}
-
-.form-horizontal .form-group {
-margin-left: -15px;
-margin-right: -15px;
-}
-
-.form-group {
-margin-bottom: 15px;
-padding-bottom: 34px;
-}
-
-.form-horizontal .control-label {
-text-align: right;
-}
-
-.form-horizontal .control-label, .form-horizontal .radio, .form-horizontal .checkbox, .form-horizontal .radio-inline, .form-horizontal .checkbox-inline {
-margin-top: 0;
-margin-bottom: 0;
-padding-top: 7px;
-}
-
-.col-lg-4 {
-width: 33.33333333%;
-}
-
-.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11 {
-float: left;
-}
-
-label {
-display: inline-block;
-margin-bottom: 5px;
-font-weight: 700;
-}
-
-.col-lg-8 {
-width: 66.66666667%;
-}
-
-#username {
-
-}
-
-.form-control {
-display: block;
-width: 100%;
-height: 34px;
-padding: 6px 12px;
-font-size: 14px;
-line-height: 1.42857143;
-color: #555;
-vertical-align: middle;
-background-color: #fff;
-background-image: none;
-border: 1px solid #ccc;
-border-radius: 4px;
--webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
--webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-background-color: rgb(250, 255, 189);
-background-image: none;
-}
-
-input, button, select, textarea {
-font-family: inherit;
-font-size: inherit;
-line-height: inherit;
-}
-
-button, input {
-line-height: normal;
-}
-
-button, input, select, textarea {
-font-family: inherit;
-font-size: 100%;
-margin: 0;
-}
-
-
-.col-lg-offset-4 {
-margin-left: 33.33333333%;
-}
-
-.radio, .checkbox {
-display: block;
-min-height: 20px;
-margin-top: 10px;
-margin-bottom: 10px;
-padding-left: 20px;
-vertical-align: middle;
-}
-
-.radio input[type=radio], .radio-inline input[type=radio], .checkbox input[type=checkbox], .checkbox-inline input[type=checkbox] {
-float: left;
-margin-left: -20px;
-}
-
-input[type=radio], input[type=checkbox] {
-margin: 4px 0 0;
-margin-top: 1px \9;
-line-height: normal;
-}
-
-input[type=checkbox], input[type=radio] {
-box-sizing: border-box;
-padding: 0;
-}
-
-p {
-margin: 0 0 10px;
-}
-
-div.well.well-sm {
-margin-bottom: 0;
-}
-
-.well-sm {
-padding: 9px;
-border-radius: 3px;
-}
-
-.well {
-min-height: 20px;
-padding: 9px;
-margin-bottom: 20px;
-background-color: #f5f5f5;
-border: 1px solid #e3e3e3;
-border-radius: 4px;
--webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-}
-
-.text-right {
-text-align: right;
-}
-
-.btn-link, .btn-link:hover, .btn-link:focus, .btn-link:active {
-border-color: transparent;
-}
-
-.btn-link, .btn-link:active, .btn-link[disabled], fieldset[disabled] .btn-link {
-background-color: transparent;
--webkit-box-shadow: none;
-box-shadow: none;
-}
-
-.btn-link {
-color: #428bca;
-font-weight: 400;
-cursor: pointer;
-border-radius: 0;
-}
-
-.btn {
-display: inline-block;
-margin-bottom: 0;
-font-weight: 400;
-text-align: center;
-vertical-align: middle;
-cursor: pointer;
-background-image: none;
-border: 1px solid transparent;
-white-space: nowrap;
-padding: 6px 12px;
-font-size: 14px;
-line-height: 1.42857143;
-border-radius: 4px;
--webkit-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
--o-user-select: none;
-user-select: none;
-}
-
-button, html input[type=button], input[type=reset], input[type=submit] {
--webkit-appearance: button;
-cursor: pointer;
-}
-
-button, select {
-text-transform: none;
-}
-
-button, input {
-line-height: normal;
-}
-
-button, input, select, textarea {
-font-family: inherit;
-font-size: 100%;
-margin: 0;
-}
-
-.fa {
-display: inline-block;
-font-family: FontAwesome;
-font-style: normal;
-font-weight: 400;
-line-height: 1;
--webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
-}
-
-i {
-margin-right: 8px;
-}
-
-.fa-key:before {
-content: "\f084";
-}
-
-.fa-tasks:before {
-content: "\f0ae";
-}
-
-.btn-primary {
-color: #fff;
-background-color: #428bca;
-border-color: #357ebd;
-}
-
-.box-heading {
-font-size: 24px;
-margin-bottom: 26px;
-}
-
-
-
-/******************************Login Page Styles******************************/
-
-.fa-sign-in:before {
-content: "\f090";
-}
-
-.error1 {
-font-size: 24px;
-font-weight: bold;
-color: red;
-display: inline-block;
-vertical-align: top;
-margin-right: 5%;
-}
-
-
-
-/******************************Header and Navigation Styles******************************/
-
-.navbar-inverse {
-background-color: #222;
-border-color: #080808;
-}
-
-.navbar-fixed-top {
-top: 0;
-border-width: 0 0 1px;
-}
-
-.navbar-fixed-top, .navbar-fixed-bottom {
-border-radius: 0;
-}
-
-.navbar-fixed-top, .navbar-fixed-bottom {
-position: fixed;
-right: 0;
-left: 0;
-z-index: 1030;
-}
-
-.navbar {
-position: relative;
-min-height: 50px;
-margin-bottom: 20px;
-border: 1px solid transparent;
-}
-
-.navbar:before, .navbar:after {
-content: " ";
-display: table;
 }
 
 div.full-width-container {
+margin-top: 25px;
+display: block;
 max-width: 90%;
 margin-left: auto;
 margin-right: auto;
 }
 
-.navbar-header {
-float: left;
+@media (max-width:991px) and (min-width:768px) {
+	div.full-width-container {
+	margin-top: 75px;
+	}
 }
 
-.navbar-inverse .navbar-brand {
-color: #999;
+.heading-label {
+margin-bottom: 20px;
 }
 
-.navbar-brand {
-float: left;
-padding: 15px;
-font-size: 18px;
-line-height: 20px;
-}
 
-.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-border-color: #101010;
-}
+/******************************Navigation Styles******************************/
 
-.navbar-collapse.collapse {
-display: block!important;
-height: auto!important;
-padding-bottom: 0;
-overflow: visible!important;
-}
-
-.navbar-collapse {
-width: auto;
-border-top: 0;
-box-shadow: none;
-}
-
-.navbar-collapse {
-max-height: 340px;
-overflow-x: visible;
-padding-right: 15px;
-padding-left: 15px;
-border-top: 1px solid transparent;
-box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
--webkit-overflow-scrolling: touch;
-}
-
-.collapse {
-display: none;
-}
-
-.navbar-nav {
-float: left;
-margin: 4px 0;
-}
-
-.nav {
-margin-bottom: 0;
-padding-left: 0;
-list-style: none;
-}
-
-.nav:before, .nav:after {
-content: " ";
-display: table;
-}
-
-.nav:after {
-clear: both;
-}
-
-.nav:before, .nav:after {
-content: " ";
-display: table;
-}
-
-.navbar-nav>li {
-float: left;
-}
-
-.nav>li {
-position: relative;
-display: block;
-}
-
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
-color: #fff;
-background-color: #080808;
-}
-
-.nav>li>a:hover, .nav>li>a:active, a.highlight {
-color: #fff !important;
-background-color: #080808;
-text-decoration: none;
-}
-
-.navbar-inverse .brand, .navbar-inverse .nav>li>a {
-color: #ccc;
-}
-
-.navbar-inverse .navbar-nav>li>a {
-color: #999;
-}
-
-.navbar-nav>li>a {
-padding-top: 15px;
-padding-bottom: 15px;
-}
-
-.navbar-nav>li>a {
-padding-top: 10px;
-padding-bottom: 10px;
-line-height: 20px;
-}
-
-.nav>li>a {
-position: relative;
-display: block;
-padding: 10px 15px;
-}
-
-.navbar-inverse * .fa {
-color: #ccc;
-}
-
-.fa-dollar:before, .fa-usd:before {
-content: "\f155";
-}
-
-.navbar-form {
-width: auto;
-border: 0;
-margin-left: 0;
-margin-right: 0;
-padding-top: 0;
-padding-bottom: 0;
--webkit-box-shadow: none;
-box-shadow: none;
-}
-
-.navbar-form {
-margin-left: -15px;
-margin-right: -15px;
-padding: 10px 15px;
-border-top: 1px solid transparent;
-border-bottom: 1px solid transparent;
--webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 1px 0 rgba(255,255,255,.1);
-box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 1px 0 rgba(255,255,255,.1);
-margin-top: 8px;
-margin-bottom: 8px;
-}
-
-.navbar-left {
-float: left!important;
-}
-
-.navbar-form .form-group {
-display: inline-block;
-margin-bottom: 0;
-vertical-align: middle;
-}
-
-.navbar-form .form-control {
-display: inline-block;
-}
-
-.navbar-collapse .navbar-nav.navbar-right:last-child {
-margin-right: -15px;
-}
-
-.navbar-right {
-float: right!important;
-}
-
-.dropdown {
-position: relative;
-}
-
-.navbar-inverse .navbar-nav>.open>a .caret, .navbar-inverse .navbar-nav>.open>a:hover .caret, .navbar-inverse .navbar-nav>.open>a:focus .caret {
-border-top-color: #fff;
-border-bottom-color: #fff;
-}
-
-.navbar-inverse .navbar-nav>.dropdown>a .caret {
-border-top-color: #999;
-border-bottom-color: #999;
-}
-
-.nav a:hover .caret {
-border-top-color: #2a6496;
-border-bottom-color: #2a6496;
-}
-
-.nav .caret {
-border-top-color: #428bca;
-border-bottom-color: #428bca;
-}
-
-.caret {
-display: inline-block;
-width: 0;
-height: 0;
-margin-left: 2px;
-vertical-align: middle;
-border-top: 4px solid #000;
-border-right: 4px solid transparent;
-border-left: 4px solid transparent;
-border-bottom: 0 dotted;
-}
 
 .navbar-nav>li>.dropdown-menu {
-margin-top: 0;
-border-top-right-radius: 0;
-border-top-left-radius: 0;
-}
-
-.navbar-right .dropdown-menu {
-right: 0;
-left: auto;
-}
-
-.dropdown-menu {
-position: absolute;
-top: 100%;
-left: 0;
-z-index: 1000;
-display: none;
-float: left;
 width: 100%;
-min-width: 160px;
-padding: 5px 0;
-margin: 2px 0 0;
-list-style: none;
-font-size: 14px;
-background-color: #fff;
-border: 1px solid #ccc;
-border: 1px solid rgba(0,0,0,.15);
-border-radius: 4px;
--webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-background-clip: padding-box;
-}
-
-.dropdown:hover >.dropdown-menu{
-display: block;
 text-align: center;
-margin-top: 0;
-border-top-right-radius: 0;
-border-top-left-radius: 0;
 }
 
-.dropdown-menu>li>a {
-padding: 3px 0;
-clear: both;
-font-weight: bold;
-line-height: 1.42857143;
-color: #333;
-white-space: nowrap;
+@media (min-width:1200px) {
+	.container {
+	width: 90% !important;
+	}
 }
 
-.dropdown-menu>li:hover, .dropdown-menu>li>a:focus {
-text-decoration: none;
-background-color: #f5f5f5;
-}
-
-.dropdown-menu>li>a:hover {
-text-decoration: none;
-}
-
-.dropdown-menu .divider {
-height: 1px;
-margin: 9px 0;
-overflow: hidden;
-background-color: #e5e5e5;
-}
-
-.navbar-inverse * .fa {
-color: #ccc;
-}
-
-.fa-sign-out:before {
-content: "\f08b";
+.nav>.active>a>.badge {
+color: #428bca;
+background-color: #fff;
 }
 
