--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,10 @@ padding: 0.3em .6em .3em !important;
 	}
 }
 
+.hidden {
+display: none;
+}
+
 
 /****************************** Navigation Styles ******************************/
 
@@ -70,6 +74,32 @@ text-align: center;
 .nav>.active>a>.badge {
 color: #428bca;
 background-color: #fff;
+}
+
+
+/****************************** Lightbox Css ******************************/
+
+
+.lightbox {
+display:none;
+min-width: 30%;
+}
+
+
+@media (min-width: 768px) {
+	.col-sm-2 {
+	width: 25.666667% !important;
+}
+
+@media (min-width: 768px) {
+	.col-sm-10 {
+	width: 72.333333% !important;
+}
+
+.cancel-link {
+display: inline-block;
+padding:7px;
+margin-left: 72%;
 }
 
 
